--- a/README
+++ b/README
@@ -19,7 +19,8 @@ The script is designed to be run on a server running Ubuntu 20.04, and the instr
 
 To run the script manually in the background:
 
-```bash
+
+
 nohup /bin/bash /path/to/vpn_check.sh > /path/to/vpn_check.log 2>&1 &
 his command will run the script in the background, and output will be redirected to vpn_check.log.
 
@@ -29,18 +30,24 @@ To set up the script to run on startup:
     Add the following line to the end of the file:
 
 @reboot /bin/bash /path/to/vpn_check.sh > /path/to/vpn_check.log 2>&1
+
 Replace /path/to/vpn_check.sh and /path/to/vpn_check.log with the actual paths to the script and log file, respectively. This will run the script whenever your server reboots.
-Allowing Reboot Without Password
+
+## Allowing Reboot Without Password
 
 By default, the script may not be able to reboot the server due to permissions. To allow the script to reboot the server without a password:
 
     Run sudo visudo. This will open the sudoers file in your default text editor.
     Add the following line at the end of the file, replacing yourusername with your actual username:
     yourusername ALL=NOPASSWD: /sbin/reboot
+
 Save and close the file. This will allow the user yourusername to run sudo reboot without having to enter a password, allowing the script to reboot the system when necessary.
-Disclaimer
+
+##Disclaimer
 
 This script will cause your server to reboot if it can't connect to the specified server, regardless of the reason. If your internet connection is unstable or if the specified server goes down, your server may reboot frequently. Use this script with caution and test thoroughly before deploying to a production environment.
-Support
+
+
+##Support
 
 Please open an issue for support.
